fixing script type

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<section id="game_div"></section>
 	<footer></footer>
-	<script type="text/javascript" src="./flashcard_QA.json"></script>
+	<script type="application/json" src="./flashcard_QA.json"></script>
 	<script type="text/javascript" src="./main.js"></script>
 	<script type="text/javascript">
 		(function(){
